syntax = "proto3";

package csw_protobuf;

import "csw_protobuf/parameter.proto";
import "google/protobuf/timestamp.proto";

message PbEvent {
    enum PbEventType {
        StatusEvent = 0;
        ObserveEvent = 1;
        SystemEvent = 2;
    }
    string prefix = 10;
    google.protobuf.Timestamp eventTime = 11;
    string obsId = 12;
    string eventId = 13;
    repeated PbParameter paramSet = 14;
    PbEventType eventType = 15;
}